refactor: run shellcheck on all POSIX scripts
In scripts/babel.sh line 6:
  if [ ! -z "${1:-}" ] && [ -d "packages/${1}" ]; then
       ^-- SC2236: Use -n instead of ! -z.

In scripts/babel.sh line 14:
  local packages=arrays
  ^------------^ SC2039: In POSIX sh, 'local' is undefined.

In scripts/babel.sh line 15:
  packages=`printf "%s\t%s" "${packages}" emails`
           ^-- SC2006: Use $(...) notation instead of legacy backticked `...`.

Did you mean:
  packages=$(printf "%s\t%s" "${packages}" emails)

In scripts/babel.sh line 16:
  packages=`printf "%s\t%s" "${packages}" errors`
           ^-- SC2006: Use $(...) notation instead of legacy backticked `...`.

Did you mean:
  packages=$(printf "%s\t%s" "${packages}" errors)

In scripts/babel.sh line 17:
  packages=`printf "%s\t%s" "${packages}" jquery`
           ^-- SC2006: Use $(...) notation instead of legacy backticked `...`.

Did you mean:
  packages=$(printf "%s\t%s" "${packages}" jquery)

In scripts/babel.sh line 18:
  packages=`printf "%s\t%s" "${packages}" numbers`
           ^-- SC2006: Use $(...) notation instead of legacy backticked `...`.

Did you mean:
  packages=$(printf "%s\t%s" "${packages}" numbers)

In scripts/babel.sh line 19:
  packages=`printf "%s\t%s" "${packages}" objects`
           ^-- SC2006: Use $(...) notation instead of legacy backticked `...`.

Did you mean:
  packages=$(printf "%s\t%s" "${packages}" objects)

In scripts/babel.sh line 20:
  packages=`printf "%s\t%s" "${packages}" privates`
           ^-- SC2006: Use $(...) notation instead of legacy backticked `...`.

Did you mean:
  packages=$(printf "%s\t%s" "${packages}" privates)

In scripts/babel.sh line 21:
  packages=`printf "%s\t%s" "${packages}" promises`
           ^-- SC2006: Use $(...) notation instead of legacy backticked `...`.

Did you mean:
  packages=$(printf "%s\t%s" "${packages}" promises)

In scripts/babel.sh line 22:
  packages=`printf "%s\t%s" "${packages}" strings`
           ^-- SC2006: Use $(...) notation ins

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,16 +11,19 @@ ENV PATH=/home/node/.npm-global/bin:$PATH
 ENV GPG_TTY=/dev/console
 
 # When upgrading versions for Alpine, run:
-# docker run -it --rm -u root creemama/node-no-yarn:version-alpine sh
+# docker run -it --rm -u root creemama/node-no-yarn:lts-alpine sh
 # apk update
 # apk search package | sort
 # I found package versions at:
 # https://pkgs.alpinelinux.org/packages .
 
-RUN apk --no-cache --update add \
+RUN printf '%s' '@edgecommunity http://nl.alpinelinux.org/alpine/edge/community' >> /etc/apk/repositories \
+ && apk --no-cache --update add \
       git=2.24.3-r0 \
       gnupg=2.2.19-r0 \
-      openssh=8.1_p1-r0
+      openssh=8.1_p1-r0 \
+      shellcheck=0.7.0-r1 \
+      shfmt@edgecommunity=3.2.0-r1
 
 USER node
 WORKDIR /home/node
