fix: change @babel/runtime-corejs2 to @babel/runtime-corejs3
```
npm WARN deprecated core-js@2.6.11: core-js@<3 is no longer maintained and not recommended for usage due to the number of issues. Please, upgrade your dependencies to the actual version of core-js@3.
```

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@babel/core": "7.12.3",
     "@babel/plugin-transform-runtime": "7.12.1",
     "@babel/preset-env": "7.12.1",
-    "@util.js/lerna": "0.39.2",
+    "@util.js/node-lerna": "0.40.0",
     "chai": "4.2.0",
     "eslint-config-prettier": "6.15.0"
   },
