--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@babel/plugin-transform-runtime": "7.16.0",
     "@babel/preset-env": "7.16.0",
     "chai": "4.3.4",
-    "eslint-config-prettier": "8.3.0"
+    "eslint-config-prettier": "8.3.0",
+    "eslint-config-standard": "16.0.3"
   },
   "devDependencies-comments": [
     "Including @babel/core prevents the following warning: ",
