chore: remove build from "./dev.sh test"
You can run "./dev.sh build" separately. Removing build from
"./dev.sh test" speeds up development.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "url": "https://github.com/creemama/utiljs"
   },
   "scripts": {
+    "build": "./dev.sh build",
     "test": "./dev.sh test"
   },
   "scripts-comments": [
