--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 # This is a development container. To use this container, run:
 # ../scripts/docker.sh
 
-FROM creemama/node-no-yarn:16.13.0-alpine3.14
+FROM creemama/shellutil-dev:18.12.1-alpine3.16
 
 # https://github.com/nodejs/docker-node/blob/master/docs/BestPractices.md
 ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
@@ -9,12 +9,6 @@ ENV PATH=/home/node/.npm-global/bin:$PATH
 
 # I got /dev/console from https://hub.docker.com/r/vladgh/gpg/ .
 ENV GPG_TTY=/dev/console
-
-COPY dev.sh .
-COPY shellutil ./shellutil
-RUN ./dev.sh apk-add \
- && rm -rf shellutil \
- && rm dev.sh
 
 USER node
 WORKDIR /home/node
